# minecraft-ai

./: .gitignore  pyproject.toml  requirements.txt
minecraft_ai/: __init__.py
minecraft_ai/algo/: __init__.py  gae.py  ppo.py  rollout_buffer.py
minecraft_ai/envs/: __init__.py  action_space.py  mock_env.py  rewards.py  wrappers.py
minecraft_ai/evaluation/: __init__.py  evaluator.py  plotting.py  video_recorder.py
minecraft_ai/models/: __init__.py  cnn_encoder.py  policy_network.py  rnd.py
minecraft_ai/training/: __init__.py  checkpoint.py  curriculum.py  logger.py  trainer.py
minecraft_ai/utils/: __init__.py  config.py  torch_utils.py
notebooks/: train_colab.ipynb
scripts/: run_local_test.py  watch_training.py
tests/: test_action_space.py  test_checkpoint.py  test_cnn_encoder.py  test_gae.py  test_mock_env.py  test_policy_network.py  test_ppo.py  test_rnd.py  test_rollout_buffer.py
